--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
-
+    <link href="http://fonts.googleapis.com/css?family=Cabin+Sketch:bold" rel="stylesheet" type="text/css" />
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -213,6 +213,49 @@
                         <p class="text-muted">Website Redesign</p>
                     </div>
                 </div>
+<div id="content">
+            <div class="legend">
+                <h1>Legend:</h1>
+                <div class="skills">
+                    <ul>
+                        <li class="jq">JavaScript</li>
+                        <li class="css">CSS3</li>
+                        <li class="html">HTML5</li>
+                        <li class="php">PHP</li>
+                        <li class="sql">MySQL</li>
+                    </ul>
+                </div>  
+            </div>
+            <div id="diagram"></div>
+        </div>
+
+        <div class="get">
+            <div class="arc">
+                <span class="text">JavaScript</span>
+                <input type="hidden" class="percent" value="95" />
+                <input type="hidden" class="color" value="#97BE0D" />
+            </div>
+            <div class="arc">
+                <span class="text">CSS3</span>
+                <input type="hidden" class="percent" value="90" />
+                <input type="hidden" class="color" value="#D84F5F" />
+            </div>
+            <div class="arc">
+                <span class="text">HTML5</span>
+                <input type="hidden" class="percent" value="80" />
+                <input type="hidden" class="color" value="#88B8E6" />
+            </div>
+            <div class="arc">
+                <span class="text">PHP</span>
+                <input type="hidden" class="percent" value="53" />
+                <input type="hidden" class="color" value="#BEDBE9" />
+            </div>
+            <div class="arc">
+                <span class="text">MySQL</span>
+                <input type="hidden" class="percent" value="45" />
+                <input type="hidden" class="color" value="#EDEBEE" />
+            </div>
+        </div>
             </div>
         </div>
     </section>
@@ -278,13 +321,27 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4 class="subheading">Loyalty Engine</h4>
-                                    <h4 class="subheading">Lead Developer</h4>
+                                    <h4 class="subheading">Developer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">After my internship with SDMG was over I was introduced to their sister company Loyalty Engine. Working with LE was one of the most challenging experience I've ever had. There was a lot of learning and planning required in a short amount of time, but with some great support from SDMG and a little perseverance I was able to pull through. I gained valuable experience in rapid development for back- end systems and worked frequently on MySQL stored procedures.</p>
+                                    <p class="text-muted">After my internship with SDMG was over I was introduced to their sister company Loyalty Engine. Working with LE was a challenge, there was a lot of learning and planning required in a short amount of time but with some great support from SDMG and a little perseverance I was able to pull through. I gained valuable experience in rapid development for back- end systems and worked frequently on MySQL stored procedures.</p>
                                 </div>
                             </div>
                         </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/criticalmass.com_.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">Critical Mass</h4>
+                                    <h4 class="subheading">Developer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted"></p>
+                                </div>
+                            </div>
+                        </li>    
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>...
@@ -596,6 +653,8 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+    <script src="js/raphael.js" type="text/javascript"></script>
+    <script src="js/init.js" type="text/javascript"></script>
 	<!-- Typed jQuery -->
 	<script src="js/typed.js"></script>
 	<script>
