Edit css for animated skill diagram

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -218,11 +218,11 @@
                 <h1>Legend:</h1>
                 <div class="skills">
                     <ul>
-                        <li class="jq">JavaScript</li>
+                        <li class="cms">CMS</li>
                         <li class="css">CSS3</li>
-                        <li class="html">HTML5</li>
-                        <li class="php">PHP</li>
+                        <li class="html">HTML</li>
                         <li class="sql">MySQL</li>
+                        <li class="php">PHP</li>
                     </ul>
                 </div>  
             </div>
@@ -231,29 +231,29 @@
 
         <div class="get">
             <div class="arc">
-                <span class="text">JavaScript</span>
-                <input type="hidden" class="percent" value="95" />
-                <input type="hidden" class="color" value="#97BE0D" />
+                <span class="text">CMS</span>
+                <input type="hidden" class="percent" value="90" />
+                <input type="hidden" class="color" value="#003B46" />
             </div>
             <div class="arc">
                 <span class="text">CSS3</span>
-                <input type="hidden" class="percent" value="90" />
-                <input type="hidden" class="color" value="#D84F5F" />
+                <input type="hidden" class="percent" value="85" />
+                <input type="hidden" class="color" value="#07575B" />
             </div>
             <div class="arc">
-                <span class="text">HTML5</span>
+                <span class="text">HTML</span>
                 <input type="hidden" class="percent" value="80" />
-                <input type="hidden" class="color" value="#88B8E6" />
-            </div>
-            <div class="arc">
-                <span class="text">PHP</span>
-                <input type="hidden" class="percent" value="53" />
-                <input type="hidden" class="color" value="#BEDBE9" />
+                <input type="hidden" class="color" value="#66A5AD" />
             </div>
             <div class="arc">
                 <span class="text">MySQL</span>
-                <input type="hidden" class="percent" value="45" />
-                <input type="hidden" class="color" value="#EDEBEE" />
+                <input type="hidden" class="percent" value="60" />
+                <input type="hidden" class="color" value="#2C7873" />
+            </div>
+            <div class="arc">
+                <span class="text">PHP</span>
+                <input type="hidden" class="percent" value="50" />
+                <input type="hidden" class="color" value="#C4DFE6" />
             </div>
         </div>
             </div>
@@ -266,7 +266,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted">"The best way to predict the future...</h3>
                 </div>
             </div>
             <div class="row">
@@ -342,13 +341,6 @@
                                 </div>
                             </div>
                         </li>    
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>...
-                                	<br>Is to 
-                                    <br>Create it."</h4>
-                            </div>
-                        </li>
                     </ul>
                 </div>
             </div>
