--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -266,6 +266,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
+                    <h3 class="section-subheading text-muted">Places I've been.</h3>
                 </div>
             </div>
             <div class="row">
